added swagger for ticket handler
